--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -109,110 +109,14 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/get2gnow/ui/main_window_height</key>
-			<applyto>/apps/get2gnow/ui/main_window_height</applyto>
-			<owner>get2gnow</owner>
-			<type>int</type>
-			<default>690</default>
-			<locale name="C">
-				<short>Main window height</short>
-				<long>Main window height.</long>
-			</locale>
-		</schema>
-		
-		<schema>
-			<key>/schemas/apps/get2gnow/ui/main_window_width</key>
-			<applyto>/apps/get2gnow/ui/main_window_width</applyto>
-			<owner>get2gnow</owner>
-			<type>int</type>
-			<default>730</default>
-			<locale name="C">
-				<short>Main window width</short>
-				<long>Main window width.</long>
-			</locale>
-		</schema>
-		
-		<schema>
-			<key>/schemas/apps/get2gnow/ui/main_window_pos_x</key>
-			<applyto>/apps/get2gnow/ui/main_window_pos_x</applyto>
-			<owner>get2gnow</owner>
-			<type>int</type>
-			<default>680</default>
-			<locale name="C">
-				<short>Main window X position</short>
-				<long>Main window X position.</long>
-			</locale>
-		</schema>
-		
-		<schema>
-			<key>/schemas/apps/get2gnow/ui/main_window_pos_y</key>
-			<applyto>/apps/get2gnow/ui/main_window_pos_y</applyto>
-			<owner>get2gnow</owner>
-			<type>int</type>
-			<default>25</default>
-			<locale name="C">
-				<short>Main window Y position</short>
-				<long>Main window Y position.</long>
-			</locale>
-		</schema>
-		
-		<schema>
-			<key>/schemas/apps/get2gnow/ui/main_window_hidden</key>
-			<applyto>/apps/get2gnow/ui/main_window_hidden</applyto>
+			<key>/schemas/apps/get2gnow/ui/hidden</key>
+			<applyto>/apps/get2gnow/ui/hidden</applyto>
 			<owner>get2gnow</owner>
 			<type>bool</type>
 			<default>false</default>
 			<locale name="C">
 				<short>Hide main window</short>
 				<long>Hide the main window.</long>
-			</locale>
-		</schema>
-		
-		<schema>
-			<key>/schemas/apps/get2gnow/ui/tweet_view_height</key>
-			<applyto>/apps/get2gnow/ui/tweet_view_height</applyto>
-			<owner>get2gnow</owner>
-			<type>int</type>
-			<default>300</default>
-			<locale name="C">
-				<short>Tweet View height</short>
-				<long>Tweet View height.</long>
-			</locale>
-		</schema>
-		
-		<schema>
-			<key>/schemas/apps/get2gnow/ui/tweet_view_width</key>
-			<applyto>/apps/get2gnow/ui/tweet_view_width</applyto>
-			<owner>get2gnow</owner>
-			<type>int</type>
-			<default>575</default>
-			<locale name="C">
-				<short>Tweet View width</short>
-				<long>Tweet View width.</long>
-			</locale>
-		</schema>
-		
-		<schema>
-			<key>/schemas/apps/get2gnow/ui/tweet_view_pos_x</key>
-			<applyto>/apps/get2gnow/ui/tweet_view_pos_x</applyto>
-			<owner>get2gnow</owner>
-			<type>int</type>
-			<default>690</default>
-			<locale name="C">
-				<short>Tweet View X position</short>
-				<long>Tweet View X position.</long>
-			</locale>
-		</schema>
-		
-		<schema>
-			<key>/schemas/apps/get2gnow/ui/tweet_view_pos_y</key>
-			<applyto>/apps/get2gnow/ui/tweet_view_pos_y</applyto>
-			<owner>get2gnow</owner>
-			<type>int</type>
-			<default>505</default>
-			<locale name="C">
-				<short>Tweet View Y position</short>
-				<long>Tweet View Y position.</long>
 			</locale>
 		</schema>
 		
@@ -293,6 +197,150 @@
 					title bar not actually exiting, but instead 'hiding'
 					it until the tray icon is used to restore or quit the program.
 				</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/embed_view/height</key>
+			<applyto>/apps/get2gnow/ui/embed_view/height</applyto>
+			<owner>get2gnow</owner>
+			<type>int</type>
+			<default>690</default>
+			<locale name="C">
+				<short>Embed view height</short>
+				<long>Embed view height.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/embed_view/width</key>
+			<applyto>/apps/get2gnow/ui/embed_view/width</applyto>
+			<owner>get2gnow</owner>
+			<type>int</type>
+			<default>730</default>
+			<locale name="C">
+				<short>Embed view width</short>
+				<long>Embed view width.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/positions/embed_view_x</key>
+			<applyto>/apps/get2gnow/ui/positions/embed_view_x</applyto>
+			<owner>get2gnow</owner>
+			<type>int</type>
+			<default>680</default>
+			<locale name="C">
+				<short>Embed view X position</short>
+				<long>Embed view X position.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/positions/embed_view_y</key>
+			<applyto>/apps/get2gnow/ui/positions/embed_view_y</applyto>
+			<owner>get2gnow</owner>
+			<type>int</type>
+			<default>25</default>
+			<locale name="C">
+				<short>Embed view Y position</short>
+				<long>Embed view Y position.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/main_window/height</key>
+			<applyto>/apps/get2gnow/ui/main_window/height</applyto>
+			<owner>get2gnow</owner>
+			<type>int</type>
+			<default>445</default>
+			<locale name="C">
+				<short>Main window height</short>
+				<long>Main window height.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/main_window/width</key>
+			<applyto>/apps/get2gnow/ui/main_window/width</applyto>
+			<owner>get2gnow</owner>
+			<type>int</type>
+			<default>730</default>
+			<locale name="C">
+				<short>Main window width</short>
+				<long>Main window width.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/positions/main_window_x</key>
+			<applyto>/apps/get2gnow/ui/positions/main_window_x</applyto>
+			<owner>get2gnow</owner>
+			<type>int</type>
+			<default>680</default>
+			<locale name="C">
+				<short>Main window X position</short>
+				<long>Main window X position.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/positions/main_window_y</key>
+			<applyto>/apps/get2gnow/ui/positions/main_window_y</applyto>
+			<owner>get2gnow</owner>
+			<type>int</type>
+			<default>25</default>
+			<locale name="C">
+				<short>Main window Y position</short>
+				<long>Main window Y position.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/tweet_view/height</key>
+			<applyto>/apps/get2gnow/ui/tweet_view/height</applyto>
+			<owner>get2gnow</owner>
+			<type>int</type>
+			<default>300</default>
+			<locale name="C">
+				<short>Tweet View height</short>
+				<long>Tweet View height.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/tweet_view/width</key>
+			<applyto>/apps/get2gnow/ui/tweet_view/width</applyto>
+			<owner>get2gnow</owner>
+			<type>int</type>
+			<default>575</default>
+			<locale name="C">
+				<short>Tweet View width</short>
+				<long>Tweet View width.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/positions/tweet_view_x</key>
+			<applyto>/apps/get2gnow/ui/positions/tweet_view_x</applyto>
+			<owner>get2gnow</owner>
+			<type>int</type>
+			<default>690</default>
+			<locale name="C">
+				<short>Tweet View X position</short>
+				<long>Tweet View X position.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/positions/tweet_view_y</key>
+			<applyto>/apps/get2gnow/ui/positions/tweet_view_y</applyto>
+			<owner>get2gnow</owner>
+			<type>int</type>
+			<default>505</default>
+			<locale name="C">
+				<short>Tweet View Y position</short>
+				<long>Tweet View Y position.</long>
 			</locale>
 		</schema>
 	</schemalist>
