get2gnow 00.00.DB.aF9: multiple account work enough to be usable, sorry, & theres a ton more.
I only found out a few days ago that get2gnow was broke & busted when it comes to creating accounts.  Well now its fixed! *uber-w00t!*

I have refactored how window geometry is managed & for any one looking at the code, I did it that way because I felt inspired to ;-).  I wrote it as a struct first but was than moved to do it completely differently.

I've also refactored get2gnow's entire UI & preferences.  Preferences are now better managed though some of my 'inherited' code is really bad & needs clean up.

I've also refactorred my gnome keyring management to integrate with my multiple account support.  I still need to extend that & "OnlineServices" over all to support 'resources' & etc.

As for account management, to add a new account just type in a server name, eg twitter.com or identi.ca.  For Laconica instances *donnot* add the '/api' uri suffix that's handled auto-mattically.

I've just finished removing all of my gconf settings & recreating my accounts.  *Warning:* it may not appear that your account has connected right away, its kinda random.  I'm working on it.  But at most all accounts will work after get2gnow's restarted.  Assuming you've enterred valid login details.

I still have to work on deleting accounts, improve saving & loading over all, changing account order, & especially to working on implementing xml caching.

For any one who's been wonder when I'd get around to actually making multiple account support work, well here its - along w/a whole ton more.  I know there are still some issues but I'm getting there.  Please, now that you can use get2gnow again, I would love to hear any & all feedback especially wish lists & contributions.  At long as you understand how programming can be a form of artistic, creative, & self expression than I'd love your help.  If you're looking for an anal retentive, code style, high & mighty, elietest managed project than non

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([get2gnow], [000.000.DBC.aF09], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
+AC_INIT([get2gnow], [00.00.DB.aF9], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
@@ -42,7 +42,6 @@ GTK_REQUIRED=2.12.12
 GCONF_REQUIRED=1.2.0
 LIBGIO_REQUIRED=2.15.5
 LIBCANBERRA_REQUIRED=0.4
-ISO_CODES_REQUIRED=0.35
 
 dnl -----------------------------------------------------------
 dnl GNOME Keyring
@@ -91,7 +90,6 @@ PKG_CHECK_MODULES(get2gnow,
 	gthread-2.0
 	gconf-2.0 >= $GCONF_REQUIRED
 	$gnome_keyring_pkgconfig
-	$iso_codes_pkgconfig
 ])
 AC_SUBST(get2gnow_CFLAGS)
 AC_SUBST(get2gnow_LIBS)
