get2gnow 00.00.DB.aF9: My 'Cause I have picky friends' version.
I've improved get2gnow's preferences & gconfig layer.  I'm still working on adding shiny stuff to get2gnow in preparaton for release.  *blah-blah-blah* I've done a ton in this commit but I'll write about most of it later.  Right now I'm just committing this so I can make a new preference available.  When get2gnow has multiple accounts & you send an '@' reply, or mention, by default get2gnow will add a link to the user's profile profile you're replying to.  Well I've added a preference so you can disable this & just stick to having a reply prefix '@user' only, even though it will be posted to all of your accounts.  Of course I've also added a preference to restict replies so they're only posted to the account/service the tweet is sent 'to'.  I have also go all of the 'selected tweet' actions working, like the profile popup, timeline button, follow, unfollow, & etc.  They're all working now.

I've also got all the entries under get2gnow's 'Friends' menu working.  This uses 'popup-dialog' which I'll be using for selecting which account one wants use when using the friends manager, tweet viewer, and sending DMs.  To make these as efficiant as possible I'll by adding a caching system.  I'll be starting be starting by having friends & followers saved in get2gnow's home directory, by default this is: '~/.gnome2/get2gnow/'.  Which is also where avatars and cookies are stored.

Oh yeah that reminds me, I've added cookie storage to get2gnow's OnlineServices.  I'm doing any thing more than storing cookies right now.  Mostly this for future enhancements, requirements, & possible plug-ins.

I'll be working on changing how get2gnow downloads & saves friends & followers next.  Adding basic caching will be uber easy.  But keeping them up to date will be a lil more difficult.  I'll be creating a dedicated thread which will 'monitor' friends an followers and keep them up to date.

But now, once again, all of get2gnow's p

--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -122,14 +122,44 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/get2gnow/ui/use_tweet_dialog</key>
-			<applyto>/apps/get2gnow/ui/use_tweet_dialog</applyto>
+			<key>/schemas/apps/get2gnow/ui/tweets/use_dialog</key>
+			<applyto>/apps/get2gnow/ui/tweets/use_dialog</applyto>
 			<owner>get2gnow</owner>
 			<type>bool</type>
 			<default>false</default>
 			<locale name="C">
-				<short>To write Twitter messages in a seperate window</short>
-				<long>To write Twitter messages in a seperate window.</long>
+				<short>To write &amp; view messages in a seperate window</short>
+				<long>To write &amp; view messages in a seperate window.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/tweets/direct_reply_only</key>
+			<applyto>/apps/get2gnow/ui/tweets/direct_reply_only</applyto>
+			<owner>get2gnow</owner>
+			<type>bool</type>
+			<default>false</default>
+			<locale name="C">
+				<short>How to handle replying to a tweet.</short>
+				<long>
+					Rather to post @ replies to all accounts or just the account/service the user belongs to.
+					This implies 'no_link_in_replies'.
+				</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/tweets/no_link_in_replies</key>
+			<applyto>/apps/get2gnow/ui/tweets/no_link_in_replies</applyto>
+			<owner>get2gnow</owner>
+			<type>bool</type>
+			<default>false</default>
+			<locale name="C">
+				<short>How to format replying to a tweet.</short>
+				<long>
+					Rather to add a hyperlink to a user&#039;s profile
+					when replying to a tweet in addition to the normal @user.
+				</long>
 			</locale>
 		</schema>
 		
