get2gnow 00.00.DB.aFA - window support fixed, unknown identi.ca avatars won't crash get2gnow any longer, & a ton of memory improvements.
The 'best' patch included in this commit is that I've fixed my improved geometry management.  So now it not only works it now correctly supports get2gnow's 3 separate view styles.  get2gnow now automatically applies previously saved window size & positions when modes are switched.

I've also found a few bugs & memory management improvements

I found a random bug that was causing get2gnow to crash if it ran for several days & than found an unknow identi.ca avatar.  My image method for creating an unkown icon was causing several issues.  I've fixed most of them but there are a few more I've just thought of at this moment.  I need to extend my images filename code to use the OnlineService its downloaded from.

I've also improved get2gnow's start-up & shutdown code.  Every thing, aside from gtk_main, is now controlled by start-up & shutdown functions.  Shutdown now releases even more memory.  I still want to see if I can track down any more possible improvements.

I've been out of it for almost 3 days.  I don't know what's causing my health issues but they keep setting back my road map.  Right now my right arm is out of my control.  I'm going to try get it to calm down so I can hopefully implement xml caching.  At least for friends & followers.  Once I have that implemented I need to finish programming my accounts management so accounts can be reordered & especially so they can be removed.  I also need to improve how images & etc are managed.  So old avatars are deleted when a user changes their avatar.  And I know exactly how I'm going to do it.

Committed on: 2009-05-20 @ 12:53:15 PM

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -53,6 +53,7 @@ get2gnow_SOURCES =					\
 	gtkbuilder.c		gtkbuilder.h		\
 	tree-view.c 		tree-view.h		\
 	$(keyring_sources)				\
+	core.c			core.h			\
 	main.c			main.h			\
 	about.c			about.h			\
 	services-dialog.c	services-dialog.h	\
@@ -84,6 +85,7 @@ get2gnow_OBJECTS =				\
 	gtkbuilder.$(OBJEXT)			\
 	tree-view.$(OBJEXT)			\
 	$(am__objects_1)			\
+	core.$(OBJEXT)				\
 	main.$(OBJEXT)				\
 	about.$(OBJEXT)				\
 	services-dialog.$(OBJEXT)		\
@@ -396,6 +398,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/label.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/friends-manager.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/followers-dialog.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/core.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/network.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/online-services.Po@am__quote@
