get2gnow 00.00.DB.aFB - caching implemented
I've started my caching system & moved image management over to it.  I have began working toward caching friends, follower, & tweets.  I'll be refactoring this from my cureent, & crashing, code.  I'll be wrting it so they are managed by a separate thread.

Bofore I finish that though I will be adding a 'background' process to monitor new '@' replies & DMs & display notifications for any that come in.  This will be seporate from get2gnow's current 'new tweet' notification.  Of course it will still be optional.

now, after an unexpeced bonobo crash took down SNOME & forced me to reboot, i.e., I'm whing about being up to late.  But finally of to sleep.

Good night & highest hopes to all who may read this, & especially *hugs*.

Committed on: 2009-05-22 @ 02:48:32 AM

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -15,7 +15,8 @@ data/get2gnow.schemas.in
 src/about.c
 src/app.c
 src/hint.c
-src/main.c
+src/core.c
+src/tweet-view.c
 src/network.c
 src/parser.c
 src/preferences.c
