--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([get2gnow], [00.00.DB.aFC], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
+AC_INIT([get2gnow], [00.00.DB.aFE], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
@@ -35,13 +35,14 @@ dnl Library Dependencies, uses pkg-config to detect correct version, etc
 dnl
 dnl -----------------------------------------------------------
 
-LIBSOUP_REQUIRED=2.24.3
-LIBXML_REQUIRED=2.6.16
-GLIB_REQUIRED=2.20.0
-GTK_REQUIRED=2.12.12
-GCONF_REQUIRED=1.2.0
-LIBGIO_REQUIRED=2.15.5
-LIBCANBERRA_REQUIRED=0.4
+LIBSOUP_MIN_VERSION=2.24.3
+LIBXML_MIN_VERSION=2.6.16
+GLIB_MIN_VERSION=2.20.0
+GTK_MIN_VERSION=2.12.12
+GCONF_MIN_VERSION=1.2.0
+LIBGIO_MIN_VERSION=2.15.5
+LIBCANBERRA_MIN_VERSION=0.4
+LIBGNOMEUI_MIN_VERSION=2.24
 
 dnl -----------------------------------------------------------
 dnl GNOME Keyring
@@ -78,17 +79,18 @@ PKG_CHECK_MODULES(get2gnow,
 [
 	libsexy
 	openssl
-	libsoup-2.4 >= $LIBSOUP_REQUIRED
+	libsoup-2.4 >= $LIBSOUP_MIN_VERSION
 	libnotify
 	gnome-vfs-2.0
-	gtk+-2.0 >= $GTK_REQUIRED
-	glib-2.0 >= $GLIB_REQUIRED
-	gio-2.0 >= $LIBGIO_REQUIRED
-	libcanberra-gtk >= $LIBCANBERRA_REQUIRED
-	libxml-2.0 >= $LIBXML_REQUIRED
+	gtk+-2.0 >= $GTK_MIN_VERSION
+	libgnomeui-2.0 > $LIBGNOMEUI_MIN_VERSION
+	glib-2.0 >= $GLIB_MIN_VERSION
+	gio-2.0 >= $LIBGIO_MIN_VERSION
+	libcanberra-gtk >= $LIBCANBERRA_MIN_VERSION
+	libxml-2.0 >= $LIBXML_MIN_VERSION
 	gobject-2.0
 	gthread-2.0
-	gconf-2.0 >= $GCONF_REQUIRED
+	gconf-2.0 >= $GCONF_MIN_VERSION
 	$gnome_keyring_pkgconfig
 ])
 AC_SUBST(get2gnow_CFLAGS)
@@ -120,8 +122,7 @@ po/Makefile
 echo
 echo "Prefix:       	$prefix"
 echo "GNOME Keyring:	$have_gnome_keyring"
-echo "Debug Mode:	$enable_debug"
 if test x$enable_debug = xyes ; then
-	echo "Debug BUILDDIR:	$abs_top_builddir"
+	printf "\nDebug Mode:	[enabled]\nDebug BUILDDIR:	$abs_pwd\n"
 fi
 echo
