--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -195,7 +195,7 @@
 			<applyto>/apps/get2gnow/ui/expand/selected_only</applyto>
 			<owner>get2gnow</owner>
 			<type>bool</type>
-			<default>true</default>
+			<default>false</default>
 			<locale name="C">
 				<short>Expand URLs to include paga titles only when a tweet is selected.</short>
 				<long>Expand URLs to include paga titles only when a tweet is selected.</long>
