get2gnow 00.00.DB.aFF - *my final shiny stage*. uber refactoring & improved tweets & user processing.  Completely refactored timeline processing & a lot of artistic architecure.
I've extended timeline & users list processing so status messages object contains a user object for the user who wrote it.  & user objects contain status message object containing their most recent update/tweet.

I've also extended what data is saved from the tweet & user's profile.  Though there is still some, to a lot, of information I'm not saving from tweets & user profiles.  I'll be adding those missing elements very soon.

I've coded it so all objects are created tranparently & souly in a one time pass over timelines, users lists, or etc.  I have countless plans for what I want do with this extra data & extended objects.  But for all the shiny it'll allow me to add to get2gnow...well you'll just have to wait for all of the surprises to come.

Committed on: 2009-05-26 @ 03:34:54 AM

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,7 +20,7 @@ endif
 
 get2gnow_SOURCES = 					\
 	$(keyring_sources)				\
-	core.c			core.h			\
+	program.c			program.h			\
 	main.c			main.h			\
 	gconfig.c		gconfig.h		\
 	debug.c			debug.h			\
